# vision-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/vision_bridge/: __init__.py  cli.py  prompt_csg.txt  server.py
